[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/characters/player/RespawnPlate.gd" type="Script" id=1]
[ext_resource path="res://scenes/characters/player/Player.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[node name="RespawnPlate" type="KinematicBody2D"]
collision_layer = 256
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.933333, 0.839216, 0.839216, 1 )
polygon = PoolVector2Array( 48, -48, -48, -48, -48, 48, 48, 48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
